# 16.35

./: README.md  calc  q2  q2.c
1/: a.out  metadata.yml  q2.c  q3.c  q4.c  q5.c
1/q5_new/: benchmark  q5.c  quicksort.c  sorters.c  sorters.h
2/: CMakeLists.txt
2/include/: client.h  controller.h  simulator.h  vehicle.c  vehicle.h
2/python/: DisplayServer.py
2/snippet/: thread.c
2/src/: client.c  controller.c  main.c  simulator.c  vehicle.c
2/tests/: test_controller.c
3/: CMakeLists.txt  a.out  alpha_q3.c  q3.c
3/include/: client.h  controller.h  simulator.h  vehicle.h
3/python/: DisplayClient.py  DisplayServer.py
3/src/: client.c  controller.c  main.c  simulator.c  vehicle.c
4/: a.out  q4.c
final/: a.out  command.list  test.c  test_2.c
final/Final/: controller.c  controller.h  robot.c  robot.h
